--- a/social2012/tex/paper_refs.bib
+++ b/social2012/tex/paper_refs.bib
@@ -1348,5 +1348,44 @@
 }
 
 
+@article{zachary1977information,
+  title={An information flow model for conflict and fission in small groups},
+  author={Zachary, W.W.},
+  journal={Journal of anthropological research},
+  pages={452--473},
+  year={1977},
+  publisher={JSTOR}
+}
 
+@article{pujol2001reverse,
+  title={A reverse genetic analysis of components of the Toll signaling pathway in< i> Caenorhabditis elegans</i>},
+  author={Pujol, N. and Link, E.M. and Liu, L.X. and Kurz, C.L. and Alloing, G. and Tan, M.W. and Ray, K.P. and Solari, R. and Johnson, C.D. and Ewbank, J.J.},
+  journal={Current Biology},
+  volume={11},
+  number={11},
+  pages={809--821},
+  year={2001},
+  publisher={Elsevier}
+}
 
+@article{watts1998collective,
+  title={Collective dynamics of'small-world'networks},
+  author={Watts, DJ and Strogatz, SH},
+  journal={Nature},
+  volume={393},
+  number={6684},
+  pages={440--442},
+  year={1998},
+  publisher={Macmillan Publishers Ltd., London, England}
+}
+
+@article{newman2006finding,
+  title={Finding community structure in networks using the eigenvectors of matrices},
+  author={Newman, M.E.J.},
+  journal={Physical review E},
+  volume={74},
+  number={3},
+  pages={036104},
+  year={2006},
+  publisher={APS}
+}
